--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<body>
 
 		<header>
-			<h3>8-substring-friendly Algorithm</h3>
+			<h3>n-substring-friendly Algorithm</h3>
 		</header>
 
 		<main>
