--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
+<!DOCTYPE html>
 <html>
 	<head>
-		<title>Algorithm | 8-substring-friendly Problem</title>
-		<link rel="stylesheet" href="css/style.css" media="screen" charset="utf-8">
+		<meta charset="UTF-8">
+	    <meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Algorithm | n-substring-friendly Problem</title>
+	    <link rel="stylesheet" href="css/style.css" media="screen" charset="utf-8">
 	</head>
 	<body>
 
@@ -16,17 +19,17 @@
 			</div> -->
 
 			<div class="step">
-					<h5>Enter exponent: <div class="note">NOTE: Default x = 2, in 10<sup>(x)</sup>.</div></h5>
-					<label for="exp">x = </label><input class="input" type="text" id="exp" value="2" data-text="2"/>
+					<h5>Enter exponent: <div class="note">NOTE: Default x = 3, in 10<sup>(x)</sup>.</div></h5>
+					<label for="exp">x = </label><input class="input" type="text" id="exp" value="3" data-text="3"/>
 			</div>
 
-			<div class="step">
+			<!-- <div class="step">
 					<h5>Select execution method: <div class="note">NOTE: Default(method) = 1.</div></h5>
 					<input type="radio" id="method1" name="method" value="1" checked="checked"><label for="method1">1. Using 'Loop'</label><br/>
 					<input type="radio" id="method2" name="method" value="2"><label for="method2">2. Using 'Recursion'</label><br/>
 					<input type="radio" id="method3" name="method" value="3"><label for="method3">3. Using 'Higher order functions(filter, map, reduce/fold)'</label><br/>
 					<input type="radio" id="method4" name="method" value="4"><label for="method4">4. Using 'Dynamic programming'</label>
-			</div>
+			</div> -->
 
 			<div class="step">
 				<!-- <h5>Enter any number to test: <div class="note">NOTE: Default(number) = 3521148026544.</div></h5>
@@ -39,9 +42,9 @@
 			<div id="result" data-text="Results will appear here !">Results will appear here !</div>
 		</main>
 
-		<footer>
-
-		</footer>
+		<footer class="site-footer">
+	        <span class="site-footer-owner"><a href="https://github.com/skbhardwaj/n-substring-algorithm">n-substring-algorithm</a> is maintained by <a href="https://github.com/skbhardwaj">skbhardwaj</a>.</span>
+	      </footer>
 
 		<script type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
 		<script type="text/javascript" src="js/util.js"></script>
