--- a/index.html
+++ b/index.html
@@ -13,23 +13,26 @@
 		</header>
 
 		<main>
-			<!-- <div class="step">
+			<div class="step">
 					<h5>Enter n: <div class="note">NOTE: Default(n) = 8.</div></h5>
-					<label for="n">n = </label><input class="input" type="text" id="n" value="8" maxlength="8" data-text="8"/>
-			</div> -->
+					<label for="n">n = </label><input class="input" type="text" id="n" value="8" maxlength="1" data-text="8"/>
+					<input type="button" value="+" data-val="+" class="ctrl"/>
+					<input type="button" value="-" data-val="-" class="ctrl"/>
+			</div>
 
 			<div class="step">
 					<h5>Enter exponent: <div class="note">NOTE: Default x = 3, in 10<sup>(x)</sup>.</div></h5>
-					<label for="exp">x = </label><input class="input" type="text" id="exp" value="3" data-text="3"/>
+					<label for="exp">x = </label><input class="input" value="3" type="text" id="exp" data-text="3"/>
+					<input type="button" value="+" data-val="+" class="ctrl"/>
+					<input type="button" value="-" data-val="-" class="ctrl"/>
 			</div>
 
-			<!-- <div class="step">
-					<h5>Select execution method: <div class="note">NOTE: Default(method) = 1.</div></h5>
-					<input type="radio" id="method1" name="method" value="1" checked="checked"><label for="method1">1. Using 'Loop'</label><br/>
-					<input type="radio" id="method2" name="method" value="2"><label for="method2">2. Using 'Recursion'</label><br/>
-					<input type="radio" id="method3" name="method" value="3"><label for="method3">3. Using 'Higher order functions(filter, map, reduce/fold)'</label><br/>
-					<input type="radio" id="method4" name="method" value="4"><label for="method4">4. Using 'Dynamic programming'</label>
-			</div> -->
+			<div class="step">
+				<h5>Select execution method: <div class="note">NOTE: Default(method) = 1.</div></h5>
+				<input type="radio" id="method1" name="method" value="1" checked="checked"><label for="method1">1. Using 'Loop' (Iterate each number & its digits)</label><br/>
+				<input type="radio" id="method2" name="method" value="2"><label for="method2">2. Using 'Guess' (Creates only the successful candidates, by guessing the next digit)</label><br/>
+				<!-- <input type="radio" id="method3" name="method" value="3"><label for="method3">3. Using 'Combination' (Only count the successful candidates)</label><br/> -->
+			</div>
 
 			<div class="step">
 				<!-- <h5>Enter any number to test: <div class="note">NOTE: Default(number) = 3521148026544.</div></h5>
@@ -48,7 +51,8 @@
 
 		<script type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
 		<script type="text/javascript" src="js/util.js"></script>
-		<script type="text/javascript" src="js/main.js"></script>
-		<script type="text/javascript" src="js/init.js"></script>
+		<script type="text/javascript" async src="js/main.js"></script>
+		<!-- <script type="text/javascript" async src="js/final.js"></script> -->
+		<script type="text/javascript" async src="js/init.js"></script>
 	</body>
 </html>
